tests/error/postfix.gw
// [contains] cannot be used on non-mutable data-type
1++;
